# syrano-be

./: .dockerignore  .gitignore  DATABASE.md  Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py
app/models/: __init__.py  base.py  message_history.py  profile.py  subscription.py  user.py
app/prompts/: rizz.py
app/routers/: auth.py  billing.py  profiles.py  rizz.py
app/schemas/: profile.py  rizz.py
app/services/: config.py  llm.py  ocr.py  profiles.py  subscriptions.py  users.py
app/services/ocr/: base.py  naver.py
docs/: ocr-integration.md
